week3/day17/k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: sda-training

  labels:
    app: sda-training
    component: mongodb

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sda-training
      component: mongodb

  template:
    metadata:
      labels:
        app: sda-training
        component: mongodb

    spec:
      containers:
        - name: mongodb

          image: mongo:5.0

          ports:
            - containerPort: 27017
              name: mongodb

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "300m"

          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - db.adminCommand('ping')

            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - db.adminCommand('ping')

            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: sda-training

  labels:
    app: sda-training
    component: mongodb

spec:
  type: ClusterIP

  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongodb

  selector:
    app: sda-training
    component: mongodb
