week3/day17/k8s/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: sda-training

  labels:
    app: sda-training
    component: postgresql

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sda-training
      component: postgresql

  template:
    metadata:
      labels:
        app: sda-training
        component: postgresql

    spec:
      containers:
        - name: postgresql

          image: postgres:13

          ports:
            - containerPort: 5432
              name: postgresql

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "300m"

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres

            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres

            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: sda-training

  labels:
    app: sda-training
    component: postgresql

spec:
  type: ClusterIP

  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgresql

  selector:
    app: sda-training
    component: postgresql
