week3/day17/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: sda-training

  labels:
    app: sda-training
    component: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sda-training
      component: redis

  template:
    metadata:
      labels:
        app: sda-training
        component: redis

    spec:
      containers:
        - name: redis

          image: redis:6.0-alpine

          ports:
            - containerPort: 6379
              name: redis

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"

            limits:
              memory: "128Mi"
              cpu: "150m"

          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping

            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: sda-training

  labels:
    app: sda-training
    component: redis

spec:
  type: ClusterIP

  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis

  selector:
    app: sda-training
    component: redis
