week3/day17/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sda-training-ingress
  namespace: sda-training
  annotations:
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"

spec:
  ingressClassName: nginx

  rules:
    - host: sda-training.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: sda-training-service

                port:
                  number: 3000

    - host: api.sda-training.local

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: sda-training-service

                port:
                  number: 3000
