week3/day17/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sda-training-app-policy
  namespace: sda-training

spec:
  podSelector:
    matchLabels:
      app: sda-training
      component: app

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: sda-training
      ports:
        - protocol: TCP
          port: 3000
